--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ kiwisolver==1.0.1
 MarkupSafe==1.1.1
 matplotlib==3.0.2
 mistune==0.8.4
-mkl-fft==1.0.10
+mkl-fft
 mkl-random==1.0.2
 nb-conda==2.2.1
 nb-conda-kernels==2.2.0
