--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ MarkupSafe==1.1.1
 matplotlib==3.0.2
 mistune==0.8.4
 mkl-fft
-mkl-random==1.0.2
+mkl-random
 nb-conda==2.2.1
 nb-conda-kernels==2.2.0
 nbconvert==5.3.1
